Añadidos mensajes de error y refactorización de todo el backend